--- a/app/views/short_links/_form.html.erb
+++ b/app/views/short_links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: short_link, local: true) do |form| %>
+<%= form_with(model: short_link, local: true, url: create_short_link_path) do |form| %>
   <% if short_link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(short_link.errors.count, "error") %> prohibited this short_link from being saved:</h2>
