--- a/app/views/short_links/_form.html.erb
+++ b/app/views/short_links/_form.html.erb
@@ -12,17 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :slug %>
-    <%= form.text_field :slug, id: :short_link_slug %>
-  </div>
-
-  <div class="field">
-    <%= form.label :visited %>
-    <%= form.text_field :visited, id: :short_link_visited %>
-  </div>
-
-  <div class="field">
     <%= form.label :destination %>
+    <!-- make this a required field with a valid url with javascript -->
     <%= form.text_field :destination, id: :short_link_destination %>
   </div>
 
