--- a/app/views/short_link/_form.html.erb
+++ b/app/views/short_link/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: short_link, local: true, url: create_short_link_path) do |form| %>
+<%= form_with(model: short_link, local: true, url: create_short_link_path, :class => 'd-flex justify-content-center') do |form| %>
   <% if short_link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(short_link.errors.count, "error") %> prohibited this short_link from being saved:</h2>
@@ -11,13 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :destination %>
+  <div class="field p-2">
+    <%= form.label :destination, :class => "sr-only" %>
     <!-- make this a required field with a valid url with javascript -->
-    <%= form.text_field :destination, id: :short_link_destination %>
+    <%= form.text_field :destination, id: :short_link_destination, class: 'form-control mb-2 mr-sm-2 mb-sm-0', placeholder: "www.example.com"%>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions p-2">
+    <%= form.submit(:class => 'btn btn-primary')%>
   </div>
 <% end %>
