--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -1,8 +1,11 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Short Links</h1>
 
 <%= render 'form', short_link: @short_link %>
+
+<% if notice %>
+  <p id="notice"><a href=<%=notice%>><%= notice %> </a>successfully created.</p>
+<%end %>
 
 <table class="table">
   <thead>
@@ -18,7 +21,7 @@
       <tr>
         <td><%= short_link.visited %></td>
         <td><%= short_link.destination %></td>
-        <td><%= button_to('Show', "/#{short_link.slug}", :class=> "btn btn-primary") %></td>
+        <td><%= button_to 'Show', { action: "show", slug: short_link.slug}, method: "get", :class=> "btn btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
