Fixed outer routing by non-internal links

--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -21,7 +21,7 @@
     <% @short_links.each do |short_link| %>
       <tr>
         <td><%= short_link.visited %></td>
-        <td><a href=<%=short_link.destination%>><%= short_link.destination %></a></td>
+        <td><a href="http://<%=short_link.destination%>"><%= short_link.destination %></a></td>
         <td><a href=<%=short_link.slug%>><%= request.original_url + short_link.slug %></a></td>
       </tr>
     <% end %>
