Added additional CSS and rearranged table elements

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <div class="sticky">
+    </div>
+    <nav id="nav" class="navbar navbar-default navbar-custom navbar-fixed-top sticky">
+      <div class="navbar-header page-scroll">
+        <a class="navbar-brand page-scroll" href="#page-top">Apoco</a>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
