--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,12 +1,79 @@
 $enable-flex: true;
 @import "bootstrap";
-//
-//
-// button.center-button {
-//   margin-left: 40%;
-// }
-//
-// input.center-text {
-//   margin: auto;
-//   width: 50%;
-// }
+
+.purple {
+  color: #5c26b4;
+}
+h1 {
+  text-align: center;
+}
+
+div.sticky {
+}
+
+nav.sticky {
+  top: 0px;
+  position: -webkit-sticky;
+  position: sticky;
+}
+a.navbar-brand {
+  color: white;
+}
+nav.sticky.navbar-custom.navbar-fixed-top#nav {
+  background-color: #5c26b4;
+  border-color: #4e2099;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#7438d5), to(#5c26b4));
+  background-image: -webkit-linear-gradient(top, #7438d5, 0%, #5c26b4, 100%);
+  background-image: -moz-linear-gradient(top, #7438d5 0%, #5c26b4 100%);
+  background-image: linear-gradient(to bottom, #7438d5 0%, #5c26b4 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7438d5', endColorstr='#ff5c26b4', GradientType=0);
+}
+@media (min-width: 768px) {
+  nav.navbar-custom.navbar-fixed-top {
+    border-color: transparent;
+    background-color: #5c26b4;
+    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#7438d5), to(#5c26b4));
+    background-image: linear-gradient(to bottom, #7438d5 0%, #5c26b4 100%);
+    padding: 0.5em 0em;
+    -webkit-transition: padding 0.3s;
+    -moz-transition: padding 0.3s;
+    transition: padding 0.3s;
+  }
+  .navbar-custom .navbar-brand {
+    font-size: 2em;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  table.table.table-striped {
+    width: 75%;
+    margin: 10% auto;
+    tr {
+      width: 100%;
+      td {
+        padding: 0.75em;
+      }
+    }
+  }
+  h1 {
+    margin: 10% 0 5%;
+  }
+  div.alert-info.text-center {
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 10px;
+    border: 2px solid grey;
+  }
+}
+
+table.table.table-striped {
+  width: 90%;
+  margin: 10% auto;
+  tr {
+    width: 100%;
+    td {
+      padding: 0.75em;
+    }
+  }
+}
