--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -1,19 +1,21 @@
 
-<h1>Short Links</h1>
+<h1 class="text-center">Tinifing Everything</h1>
 
 <%= render 'form', short_link: @short_link %>
 
 <% if notice %>
-  <p id="notice"><a href=<%=notice%>><%= notice %> </a>successfully created.</p>
+  <div class="alert-info text-center border">
+    <h4 class="alert-heading">Link Successfully Tinified!</h4>
+    <p id="notice"><a href="<%=notice%>"class="alert-link"><%= notice %> </a></p>
+  </div>
 <%end %>
 
-<table class="table">
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
       <th># of Visitors</th>
       <th>Destination</th>
       <th>TinierURL</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
