--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,11 +6,8 @@ $enable-flex: true;
 }
 h1 {
   text-align: center;
+  margin: 10% 0 5%;
 }
-
-div.sticky {
-}
-
 nav.sticky {
   top: 0px;
   position: -webkit-sticky;
@@ -46,18 +43,24 @@ nav.sticky.navbar-custom.navbar-fixed-top#nav {
     -moz-transition: all 0.3s;
     transition: all 0.3s;
   }
+  h1 {
+    text-align: center;
+    margin: 5% 0;
+  }
+  div.table-overflow {
+    margin: 5% auto;
+    max-height: 50vh;
+    overflow-y: auto;
+  }
   table.table.table-striped {
     width: 75%;
-    margin: 10% auto;
+    margin: 0% auto;
     tr {
       width: 100%;
       td {
         padding: 0.75em;
       }
     }
-  }
-  h1 {
-    margin: 10% 0 5%;
   }
   div.alert-info.text-center {
     width: 60%;
@@ -67,9 +70,15 @@ nav.sticky.navbar-custom.navbar-fixed-top#nav {
   }
 }
 
+div.table-overflow {
+  margin: 5% auto;
+  max-height: 50vh;
+  overflow-y: auto;
+}
 table.table.table-striped {
-  width: 90%;
-  margin: 10% auto;
+  width: 80%;
+  margin: 0% auto;
+
   tr {
     width: 100%;
     td {
