--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -2,12 +2,17 @@
     <h3></h3>
     <%= render 'form', short_link: @short_link %>
 
-    <% if notice %>
+    <% if notice && notice.include?("Must") %>
+      <div class="alert-danger text-center border">
+        <h4 class="alert-heading">Link not created!</h4>
+        <p id="notice"><a href="<%=notice%>"class="alert-link"><%= notice %> </a></p>
+      </div>
+    <%elsif notice %>
       <div class="alert-info text-center border">
         <h4 class="alert-heading">Link Successfully Tinified!</h4>
         <p id="notice"><a href="<%=notice%>"class="alert-link"><%= notice %> </a></p>
       </div>
-    <%end %>
+    <%end%>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
