--- a/app/views/short_link/_form.html.erb
+++ b/app/views/short_link/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: short_link, local: true, url: create_short_link_path, :class => 'd-flex justify-content-center') do |form| %>
+<%= form_with(model: short_link, local: true, url: create_short_link_path, :class => 'd-flex justify-content-center flex-col') do |form| %>
   <% if short_link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(short_link.errors.count, "error") %> prohibited this short_link from being saved:</h2>
@@ -11,13 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field p-2">
-    <%= form.label :destination, :class => "sr-only" %>
+  <div class="field p-3">
+    <%= form.label "Paste the Link to be Shortened Here", class: "text-center"%>
     <!-- make this a required field with a valid url with javascript -->
     <%= form.text_field :destination, id: :short_link_destination, class: 'form-control mb-2 mr-sm-2 mb-sm-0', required: true, placeholder: "www.example.com"%>
   </div>
-
-  <div class="actions p-2">
+  <div class="field p-3">
+    <%= form.label "If you'd like a custom path to the link above", class: "text-center" %>
+    <%= form.text_field :slug, id: :short_link_slug, class: 'form-control mb-2 mr-sm-2 mb-sm-0', value: "", placeholder: "Custom Slug here!"%>
+  </div>
+  <div class="actions p-3">
     <%= form.submit(:class => 'btn btn-primary')%>
   </div>
+
 <% end %>
