--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -1,5 +1,5 @@
-    <h1 class="text-center">Tinify It All</h1>
-    <h3></h3>
+    <h1 class="text-center">Life is hard enough without having to remember a long url...</h1>
+    <h3 class="text-center">With our proprietary* algorithm the web is under your control!</h3>
     <%= render 'form', short_link: @short_link %>
 
     <% if notice && notice.include?("Must") %>
@@ -9,11 +9,11 @@
       </div>
     <%elsif notice %>
       <div class="alert-info text-center border">
-        <h4 class="alert-heading">Link Successfully Tinified!</h4>
+        <h4 class="alert-heading">Website Successfully Tinified!</h4>
         <p id="notice"><a href="<%=notice%>"class="alert-link"><%= notice %> </a></p>
       </div>
     <%end%>
-      <table class="table table-striped table-bordered">
+      <table class="table table-inverse table-bordered">
         <thead>
           <tr>
             <th colspan="4">Top 100 Most Visited Sites</th>
@@ -47,3 +47,4 @@
         </tbody>
       </table>
     <br>
+    <sm class="text-center">*Not proprietary</sm>
