--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,6 +57,7 @@ button.navbar-toggle:focus  {
   border-radius: 5px;
   outline: 0;
   margin-right: 2%;
+  width: 40px;
 }
 .navbar-custom .navbar-toggle,
 .navbar-custom .navbar-toggle:focus {
