changed manifest to include fontawesome

--- a/app/views/short_link/new.html.erb
+++ b/app/views/short_link/new.html.erb
@@ -10,7 +10,7 @@
   </div>
 <%elsif notice %>
   <div class="alert-info text-center border">
-    <h4 class="alert-heading">Website Successfully Tinified!</h4>
+    <h4 class="alert-heading">Url Successfully Tinified!</h4>
     <p id="notice"><a href="<%=notice%>"class="alert-link"><%= notice %> </a></p>
   </div>
 <%end%>
