--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 $enable-flex: true;
 @import "bootstrap";
-@import "font-awesome.css";
+@import "font-awesome";
 
 body {
   font-family: montserrat, arial, verdana;
