changed font-awesome to bootstrap 4, a little buggy

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 $enable-flex: true;
 @import "bootstrap";
-@import "font-awesome";
+@import "font-awesome.css";
 
 body {
   font-family: montserrat, arial, verdana;
@@ -20,6 +20,12 @@ nav.sticky {
   top: 0px;
   position: -webkit-sticky;
   position: sticky;
+}
+span.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+button.navbar-toggle:hover {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='purple' stroke-width='1' stroke-linecap='round' stroke-miterlimit='8' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 a {
   color: white;
