--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="navbar-header page-scroll">
         <a class="navbar-brand page-scroll" href="/">Apoco</a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#dropdown-items">
-          <span class="sr-only">Toggle navigation</span><%=fa_icon "bars"%>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <ul class="hidden-list">
           <li class="nav-item active">
