fixed index bug

--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -27,7 +27,7 @@
               <td><%= i+1 %></td>
               <td><%= short_link.visited %></td>
               <td><a href="http://<%=short_link.destination%>"><%= short_link.destination %></a></td>
-              <td><a href=<%=short_link.slug%>><%= request.original_url + short_link.slug %></a></td>
+              <td><a href="/<%=short_link.slug%>"><%= request.original_url.slice(0..-3) + short_link.slug %></a></td>
             </tr>
           <% end %>
         </tbody>
