added 'top' feature

--- a/app/views/short_link/index.html.erb
+++ b/app/views/short_link/index.html.erb
@@ -2,7 +2,9 @@
       <table class="table table-inverse table-bordered">
         <thead>
           <tr>
-            <th colspan="4">Top 100 Most Visited Sites</th>
+            <th colspan="2">Top <%=@num%> Most Visited Sites</th>
+            <th colspan="1"><a href="/i/200">Top 200</a></th>
+            <th colspan="1"><a href="/i/300">Top 300</a></th>
           </tr>
         </thead>
         <thead>
